--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,7 @@
 @import '../css/clients.css';
+@import '../css/hero.css';
+@import '../css/base.css';
+@import '../css/classes.css';
+@import '../css/font.css';
+@import '../css/header.css';
+@import './clients.css';
