--- a/css/hero.css
+++ b/css/hero.css
@@ -17,7 +17,7 @@
     font-weight: 300;
     font-family: "Work Sans";
 }
-.title {
+.hero__title {
     margin-bottom: 34px;
     font-size: 62px;
     color: #ffffff;
