--- a/css/classes.css
+++ b/css/classes.css
@@ -1,9 +1,8 @@
 .container {
-    width: 1170px;
-    height: 900px;
+    max-width: 1170px;
     margin: auto;
+    border: 2px solid red;
 }
-
 .row {
     display: flex;
     align-items: center;
