--- a/css/index.css
+++ b/css/index.css
@@ -6,3 +6,4 @@
 @import './components/variables.css';
 @import './components/website.css';
 @import './components/services.css';
+@import './components/footer.css';
